<resources>
    <string name="app_name">智慧农业</string>
    <string name="apiUrl">http://127.0.0.1:8082/api</string>
    <string name="apkUrl">http://127.0.0.1:8080/res/</string>
    <string name="DataUrl">http://127.0.0.1:8080/res/videolist-metadata.json</string>
    <string name="mqtt_server_host">127.0.0.1</string>
    <string name="emqxSubscribeToSys">$SYS/brokers/emqx@localhost/clients/%s/#</string>
    <string name="emqxSubscribeToData">topic/%s/data</string>
    <string name="register_uid">账号</string>
    <string name="register_pwd0">密码</string>
    <string name="register_pwd1">确认密码</string>
    <string name="register_tel">手机号</string>
    <string name="register_check">验证码</string>
    <string name="login_uid">账号</string>
    <string name="login_pwd">密码</string>
    <string name="uid_hint_1">请填写用户名</string>
    <string name="uid_hint_2">请填写手机号</string>
    <string name="pwd_hint_1">请填写密码</string>
    <string name="pwd_hint_2">请重复填写密码</string>
    <string name="btn_login">立即登录</string>
    <string name="btn_go_register">没有账号?</string>
    <string name="btn_register">立即注册</string>
    <string name="btn_go_login">去登录</string>
    <string name="tel_hints">请填写手机号</string>
    <string name="check_hints">短信验证码</string>
    <string name="btn_Get_Code">获取验证码</string>
    <string name="login_copyright">Copyright © 2022 智慧农业</string>
    <string name="title_activity_nav">MainNav</string>
    <string name="title_videolist">种植天地</string>
    <string name="title_panel">控制面板</string>
    <string name="title_account">个人信息</string>
    <string name="todo">Null</string>
    <string name="backgroundPic">背景图</string>
    <string name="headPic">头像</string>
    <string name="headLine">分割线</string>
    <string name="defaultName">无名氏</string>
    <string name="defaultVal">新手上路</string>
    <string name="defaultPhone">未知号码</string>
    <string name="version">0.0.0</string>
    <string name="changePwd">立即修改</string>
    <string name="pwd_change">修改密码</string>
    <string name="originpwd_hints">请填写原始密码</string>
    <string name="newpwd_hints">请填写新密码</string>
    <string name="repeatpwd_hints">请重复填写密码</string>
    <string name="deivce_unbind">设备解绑</string>
    <string name="unbindDevice">确认解绑</string>
    <string name="deivce_setNet">配置网络</string>
    <string name="deivce_setNet_hint">保存二维码去微信扫码配网</string>
    <string name="savePic">保存图片</string>
    <string name="defaultDevice">无</string>
    <string name="deivce_unbind_hint">是否确认解绑以下设备:</string>
    <string name="qr_code_text">扫描二维码</string>
    <string name="scan_qr_code_warn">将二维码放入框内，即可自动扫描</string>
    <string name="scan_qr_code_from_photo_wrong">没有找到二维码</string>
    <string name="album_text">相册</string>
    <string name="scan_title">当前账户还未绑定设备\n请先扫码绑定！</string>
    <string name="btn_scan">立即绑定</string>
    <string name="defaultStatusTitle">xxx</string>
    <string name="defaultStatusValue">...</string>
    <string name="lastUpdateText">上次更新:</string>
    <string name="t_just_now">现在</string>
    <string name="t_sec_ago">%d 秒前</string>
    <string name="t_min_ago">%d 分钟前</string>
    <string name="t_hours_ago">%d 小时前</string>
    <string name="t_days_ago">%d 天前</string>
    <string name="saveSetting">保存设置</string>
    <string name="deivce_setTime">配置时间</string>
    <string name="deivce_setTime_hint">设置夜间模式开始和结束时间</string>
    <string name="grantedText">我已阅读并同意用户注册协议和隐私政策</string>
    <string name="t_setting">设置</string>
</resources>
