<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_item_control"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2sp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="2sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/control_btn_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultStatusTitle"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/btn_control"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:background="@drawable/bg_switch"
                android:checked="false"
                android:text=""
                android:textOff=""
                android:textOn="" />

            <Button
                android:id="@+id/btn_setting"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:background="@drawable/btn_shape"
                android:text="@string/t_setting"
                android:textColor="@color/colorBtnText"
                android:textSize="14sp"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastUpdateText"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/controlLastUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/todo"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>