<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_item_status"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_margin="2sp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="2sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/statusTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultStatusTitle"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textRendererPrefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultStatusValue"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textRendererValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultStatusValue"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textRendererSuffix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4sp"
                android:layout_marginTop="-8sp"
                android:layout_weight="1"
                android:text="@string/defaultStatusValue"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastUpdateText"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/statusLastUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/todo"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>